--- a/docker/DockerfileBuild
+++ b/docker/DockerfileBuild
@@ -6,7 +6,7 @@ RUN mkdir /root/src
 WORKDIR /root/src
 ADD xlnt.tgz /root/src
 RUN mkdir /root/src/xlnt/bb
-WORKDIR /root/src/xlnt/bb
+WORKDIR /..root/src/xlnt/bb
 RUN yum install -y make
 RUN mkdir -p rdir/usr/local
 RUN cmake3 ../ -DCMAKE_INSTALL_PREFIX=rdir/usr/local && make -j3 && make install
